# Libreria

./: .gitignore  README.md  pyproject.toml
data/: books.csv  loans.csv  users.csv
scripts/: create_db.py
src/: main.py
src/database/: __init__.py  book_db.py  loans_db.py  users_db.py
src/models/: books.py  loan.py  users.py
src/routes/: book.py  loan.py  user.py
tests/: test_books.py  test_loan.py  test_users.py
